--- a/NPK/requirements.txt
+++ b/NPK/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.3.4
 certifi==2020.12.5
 dj-database-url==0.5.0
 Django==3.0.5
+django-countries==7.2.1
 django-truncate==0.1
 dnspython==2.1.0
 gunicorn==20.1.0
+Pillow==8.2.0
 psycopg2==2.8.6
 pymongo==3.11.4
 pytz==2021.1
