--- a/NPK/requirements.txt
+++ b/NPK/requirements.txt
@@ -1,15 +1,21 @@
-asgiref==3.3.4
-certifi==2020.12.5
-dj-database-url==0.5.0
-Django==3.0.5
+asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+boto3==1.17.21
+botocore==1.20.21
+certifi==2021.5.30
+Django @ file:///tmp/build/80754af9/django_1620913015185/work
 django-countries==7.2.1
-django-truncate==0.1
-dnspython==2.1.0
-gunicorn==20.1.0
+django-crispy-forms==1.11.1
+django-storages==1.11.1
+jmespath==0.10.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 Pillow==8.2.0
-psycopg2==2.8.6
-pymongo==3.11.4
-pytz==2021.1
-sqlparse==0.2.4
-whitenoise==5.2.0
+psycopg2 @ file:///C:/ci/psycopg2_1612298803839/work
+python-dateutil==2.8.1
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+s3transfer==0.3.4
+six==1.14.0
+sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+urllib3==1.26.3
 wincertstore==0.2
+wrapt==1.11.2
